@@ -431,6 +431,10 @@ public class Armorsmithing extends EnhancedCraftingSkill implements ItemCraftor,
 				commands.remove(commands.size()-1);
 			}
 
+			final int[] pm=checkMaterialFrom(mob,commands,new int[]{RawMaterial.MATERIAL_METAL,RawMaterial.MATERIAL_MITHRIL});
+			if(pm==null)
+				return false;
+
 			final String recipeName=CMParms.combine(commands,0);
 			List<String> foundRecipe=null;
 			final List<List<String>> matches=matchingRecipeNames(recipes,recipeName,true);
@@ -465,7 +469,6 @@ public class Armorsmithing extends EnhancedCraftingSkill implements ItemCraftor,
 			if(amount>woodRequired)
 				woodRequired=amount;
 			final String misctype=foundRecipe.get(RCP_MISCTYPE);
-			final int[] pm={RawMaterial.MATERIAL_METAL,RawMaterial.MATERIAL_MITHRIL};
 			bundling=misctype.equalsIgnoreCase("BUNDLE");
 			final int[][] data=fetchFoundResourceData(mob,
 												woodRequired,"metal",pm,
