@@ -444,6 +444,9 @@ public class Carpentry extends EnhancedCraftingSkill implements ItemCraftor
 				amount=CMath.s_int(commands.get(commands.size()-1));
 				commands.remove(commands.size()-1);
 			}
+			final int[] pm=checkMaterialFrom(mob,commands,new int[]{RawMaterial.MATERIAL_WOODEN});
+			if(pm==null)
+				return false;
 			final String recipeName=CMParms.combine(commands,0);
 			List<String> foundRecipe=null;
 			final List<List<String>> matches=matchingRecipeNames(recipes,recipeName,true);
@@ -479,7 +482,6 @@ public class Carpentry extends EnhancedCraftingSkill implements ItemCraftor
 			if(amount>woodRequired)
 				woodRequired=amount;
 			final String misctype=foundRecipe.get(RCP_MISCTYPE);
-			final int[] pm={RawMaterial.MATERIAL_WOODEN};
 			bundling=misctype.equalsIgnoreCase("BUNDLE");
 			final int[][] data=fetchFoundResourceData(mob,
 													woodRequired,"wood",pm,
