@@ -378,6 +378,12 @@ public class Cobbling extends EnhancedCraftingSkill implements ItemCraftor, Mend
 				amount=CMath.s_int(commands.get(commands.size()-1));
 				commands.remove(commands.size()-1);
 			}
+			final int[] pm=checkMaterialFrom(mob,commands,new int[]{
+					RawMaterial.MATERIAL_METAL,RawMaterial.MATERIAL_MITHRIL,RawMaterial.MATERIAL_CLOTH,
+					RawMaterial.MATERIAL_WOODEN,RawMaterial.MATERIAL_LEATHER
+			});
+			if(pm==null)
+				return false;
 			final String recipeName=CMParms.combine(commands,0);
 			List<String> foundRecipe=null;
 			final List<List<String>> matches=matchingRecipeNames(recipes,recipeName,true);
@@ -413,7 +419,6 @@ public class Cobbling extends EnhancedCraftingSkill implements ItemCraftor, Mend
 			if(amount>woodRequired)
 				woodRequired=amount;
 			final String misctype=foundRecipe.get(RCP_MISCTYPE);
-			final int[] pm={RawMaterial.MATERIAL_METAL,RawMaterial.MATERIAL_MITHRIL,RawMaterial.MATERIAL_CLOTH,RawMaterial.MATERIAL_WOODEN,RawMaterial.MATERIAL_LEATHER};
 			bundling=misctype.equalsIgnoreCase("BUNDLE");
 			final int[][] data=fetchFoundResourceData(mob,
 													woodRequired,"metal",pm,
