@@ -419,6 +419,9 @@ public class Tailoring extends EnhancedCraftingSkill implements ItemCraftor, Men
 				amount=CMath.s_int(commands.get(commands.size()-1));
 				commands.remove(commands.size()-1);
 			}
+			final int[] pm=checkMaterialFrom(mob,commands,new int[]{RawMaterial.MATERIAL_CLOTH});
+			if(pm==null)
+				return false;
 			final String recipeName=CMParms.combine(commands,0);
 			List<String> foundRecipe=null;
 			final List<List<String>> matches=matchingRecipeNames(recipes,recipeName,true);
@@ -455,7 +458,6 @@ public class Tailoring extends EnhancedCraftingSkill implements ItemCraftor, Men
 				woodRequired=amount;
 			final String misctype=foundRecipe.get(RCP_MISCTYPE);
 			bundling=misctype.equalsIgnoreCase("BUNDLE");
-			final int[] pm={RawMaterial.MATERIAL_CLOTH};
 			final int[][] data=fetchFoundResourceData(mob,
 													woodRequired,"cloth",pm,
 													0,null,null,
