@@ -305,6 +305,9 @@ public class Wainwrighting extends EnhancedCraftingSkill implements ItemCraftor
 			amount=CMath.s_int(commands.get(commands.size()-1));
 			commands.remove(commands.size()-1);
 		}
+		final int[] pm=checkMaterialFrom(mob,commands,new int[]{RawMaterial.MATERIAL_WOODEN});
+		if(pm==null)
+			return false;
 		final String recipeName=CMParms.combine(commands,0);
 		List<String> foundRecipe=null;
 		final List<List<String>> matches=matchingRecipeNames(recipes,recipeName,true);
@@ -339,7 +342,6 @@ public class Wainwrighting extends EnhancedCraftingSkill implements ItemCraftor
 
 		if(amount>woodRequired)
 			woodRequired=amount;
-		final int[] pm={RawMaterial.MATERIAL_WOODEN};
 		final String misctype=foundRecipe.get(RCP_MISCTYPE);
 		final int[][] data=fetchFoundResourceData(mob,
 												woodRequired,"wood",pm,
