@@ -446,6 +446,9 @@ public class Weaponsmithing extends EnhancedCraftingSkill implements ItemCraftor
 				amount=CMath.s_int(commands.get(commands.size()-1));
 				commands.remove(commands.size()-1);
 			}
+			final int[] pm=checkMaterialFrom(mob,commands,new int[]{RawMaterial.MATERIAL_METAL,RawMaterial.MATERIAL_MITHRIL});
+			if(pm==null)
+				return false;
 			final String recipeName=CMParms.combine(commands,0);
 			List<String> foundRecipe=null;
 			final List<List<String>> matches=matchingRecipeNames(recipes,recipeName,true);
@@ -482,7 +485,6 @@ public class Weaponsmithing extends EnhancedCraftingSkill implements ItemCraftor
 			if(amount>woodRequired)
 				woodRequired=amount;
 			final String otherRequired=foundRecipe.get(RCP_EXTRAREQ);
-			final int[] pm={RawMaterial.MATERIAL_METAL,RawMaterial.MATERIAL_MITHRIL};
 			final String spell=(foundRecipe.size()>RCP_SPELL)?foundRecipe.get(RCP_SPELL).trim():"";
 			bundling=spell.equalsIgnoreCase("BUNDLE");
 			final int[][] data=fetchFoundResourceData(mob,
