@@ -89,6 +89,7 @@ ARMOURSMITHING=ARMORSMITHING
 ARMORSMITH=ARMORSMITHING
 ARMORSMITHING=<ABILITY>\
 Usage    : ARMORSMITH (LIST/MEND/REFIT/SCAN/LEARN/INFO) [ARMOR NAME]\n\r\
+Usage    :   ... (FROM [RESOURCE NAME])\n\r\
 Example  : armorsmith platemail shirt\n\r\
 :        : armorsmith list\n\r\
 :        : armorsmith list vest\n\r\
@@ -173,6 +174,7 @@ can be used to list the types of fish that can be baited for.
 BLACKSMITH=BLACKSMITHING
 BLACKSMITHING=<ABILITY>\
 Usage    : BLACKSMITH (LIST/LEARN/INFO) (BUNDLE [NUM]) [ITEM TYPE]\n\r\
+Usage    :   ... (FROM [RESOURCE NAME])\n\r\
 Example  : blacksmith pot\n\r\
 :        : blacksmith bundle 100 iron\n\r\
 :        : blacksmith list\n\r\
@@ -194,6 +196,7 @@ and better metals through the Smelting skill.
 BOATWRIGHTING=BOATWRIGHT
 BOATWRIGHT=<ABILITY>\
 Usage    : BOATWRIGHT (LIST/INFO/MEND/SCAN) [ITEM NAME]\n\r\
+Usage    :   ... (FROM [RESOURCE NAME])\n\r\
 Example  : boatwright canoe\n\r\
 :        : boatwright list\n\r\
 :        : boatwright list canoe\n\r\
@@ -324,6 +327,7 @@ room to the loader.  Cargo will always be loaded below decks.
 CARVE=CARPENTRY
 CARPENTRY=<ABILITY>\
 Usage    : CARVE (LIST/INFO/MEND/REFIT/SCAN/LEARN) (BUNDLE [NUM]) [ITEM TYPE]\n\r\
+Usage    :   ... (FROM [RESOURCE NAME])\n\r\
 Example  : carve small table\n\r\
 :        : carve bundle 100 maple\n\r\
 :        : carve list\n\r\
@@ -438,6 +442,7 @@ skill.
 COBBLE=COBBLING
 COBBLING=<ABILITY>\
 Usage    : COBBLE (LIST/INFO/MEND/REFIT/SCAN/LEARN) (BUNDLE [NUM]) [ITEM TYPE]\n\r\
+Usage    :   ... (FROM [RESOURCE NAME])\n\r\
 Example  : cobble shoes\n\r\
 :        : cobble bundle 100 oak\n\r\
 :        : cobble list\n\r\
@@ -710,7 +715,7 @@ available for fishing or trawling.
 
 FLETCH=FLETCHING
 FLETCHING=<ABILITY>\
-Usage    : FLETCH (LIST/INFO/LEARN) [ITEM TYPE]\n\r\
+Usage    : FLETCH (LIST/INFO/LEARN) [ITEM TYPE] (FROM [RESOURCE NAME])\n\r\
 Example  : fletch short bow\n\r\
 :        : fletch list\n\r\
 :        : fletch list bow\n\r\
@@ -922,6 +927,7 @@ JEWEL=JEWEL_MAKING
 JEWELMAKING=JEWEL_MAKING
 JEWEL_MAKING=<ABILITY>\
 Usage    : JEWEL (LIST/INFO/MEND/REFIT/LEARN/MOUNT (GEM)/ENCRUST (GEM)) [ITEM TYPE]\n\r\
+Usage    :   ... (FROM [RESOURCE NAME])\n\r\
 Example  : jewel ring\n\r\
 :        : jewel list\n\r\
 :        : jewel list ring\n\r\
@@ -984,6 +990,7 @@ LEATHERWORK=LEATHER_WORKING
 LEATHERWORKING=LEATHER_WORKING
 LEATHER_WORKING=<ABILITY>\
 Usage    : LEATHERWORK (LIST/INFO/MEND/REFIT/SCAN/LEARN) (BUNDLE [NUM]) [ITEM TYPE]\n\r\
+Usage    :   ... (FROM [RESOURCE NAME])\n\r\
 Example  : leatherwork pot\n\r\
 :        : leatherwork bundle 100 leather\n\r\
 :        : leatherwork list\n\r\
@@ -1024,6 +1031,7 @@ LWEAPONSMITH=LEGENDARYWEAPONSMITHING
 LEGENDARY_WEAPONSMITHING=LEGENDARYWEAPONSMITHING
 LEGENDARYWEAPONSMITHING=<ABILITY>\
 Usage    : LWEAPONSMITH (LIST/INFO/MEND/SCAN/LEARN) [WEAPON NAME]\n\r\
+Usage    :   ... (FROM [RESOURCE NAME])\n\r\
 Example  : lweaponsmith twohanded sword\n\r\
 :        : lweaponsmith list\n\r\
 :        : lweaponsmith list sword\n\r\
@@ -1111,6 +1119,7 @@ MARMORSMITH=MASTERARMORSMITHING
 MASTER_ARMORSMITHING=MASTERARMORSMITHING
 MASTERARMORSMITHING=<ABILITY>\
 Usage    : MARMORSMITH (LIST/INFO/MEND/SCAN/LEARN) [ARMOR TYPE]\n\r\
+Usage    :   ... (FROM [RESOURCE NAME])\n\r\
 Example  : marmorsmith chainmail\n\r\
 :        : marmorsmith list\n\r\
 :        : marmorsmith list chain\n\r\
@@ -1410,6 +1419,7 @@ MASTER_LEATHER_WORKING=MASTERLEATHERWORKING
 MASTER_LEATHERWORKING=MASTERLEATHERWORKING
 MASTERLEATHERWORKING=<ABILITY>\
 Usage    : MLEATHERWORK (LIST/INFO/MEND/REFIT/LEARN/SCAN) (BUNDLE [NUM]) [ITEM]\n\r\
+Usage    :   ... (FROM [RESOURCE NAME])\n\r\
 Example  : mleatherwork vest\n\r\
 :        : mleatherwork bundle 100 leather\n\r\
 :        : mleatherwork list\n\r\
@@ -1505,6 +1515,7 @@ MWEAPONSMITH=MASTERWEAPONSMITHING
 MASTER_WEAPONSMITHING=MASTERWEAPONSMITHING
 MASTERWEAPONSMITHING=<ABILITY>\
 Usage    : MWEAPONSMITH (LIST/INFO/MEND/SCAN/LEARN) [WEAPON NAME]\n\r\
+Usage    :   ... (FROM [RESOURCE NAME])\n\r\
 Example  : mweaponsmith twohanded sword\n\r\
 :        : mweaponsmith list\n\r\
 :        : mweaponsmith list sword\n\r\
@@ -1677,7 +1688,8 @@ the players inventory.
 
 RODSMITH=RODSMITHING
 RODSMITHING=<ABILITY>\
-Usage    : RODSMITH (LIST/INFO/MEND/SCAN/LEARN) [STAFF NAME]\n\r\
+Usage    : RODSMITH (LIST/INFO/MEND/SCAN/LEARN) [ROD NAME]\n\r\
+Usage    :   ... (FROM [RESOURCE NAME])\n\r\
 Example  : rodsmith rod\n\r\
 :        : rodsmith list\n\r\
 :        : rodsmith list rod\n\r\
@@ -1770,6 +1782,7 @@ onto a scroll, transcribing a spell from one scroll to another is relatively fre
 SCULPT=SCULPTING
 SCULPTING=<ABILITY>\
 Usage    : SCULPT (LIST/INFO/MEND/SCAN/LEARN) (BUNDLE [NUM]) [ITEM NAME] (PARAMETER)\n\r\
+Usage    :   ... (FROM [RESOURCE NAME])\n\r\
 Example  : sculpt bench\n\r\
 :        : sculpt bundle 100 stone\n\r\
 :        : sculpt statue of the great Alramus\n\r\
@@ -1810,6 +1823,7 @@ SHIPBUILDING=SHIPWRIGHT
 SHIP_BUILDING=SHIPWRIGHT
 SHIPWRIGHT=<ABILITY>\
 Usage    : SHIPWRIGHT (LIST/INFO/MEND/SCAN) [ITEM NAME]\n\r\
+Usage    :  ... (FROM [RESOURCE NAME])\n\r\
 Example  : shipwright cruiser\n\r\
 :        : shipwright list\n\r\
 :        : shipwright list cruiser\n\r\
@@ -1921,6 +1935,7 @@ STUDY with a skill type like SPELLS, SKILLS, etc will list the things you can le
 STAFFMAKE=STAFFMAKING
 STAFFMAKING=<ABILITY>\
 Usage    : STAFFMAKE (LIST/INFO/MEND/SCAN/LEARN) [STAFF NAME]\n\r\
+Usage    :   ... (FROM [RESOURCE NAME])\n\r\
 Example  : staffmake Iron-shod Staff\n\r\
 :        : staffmake list\n\r\
 :        : staffmake list Iron-shod\n\r\
@@ -2101,7 +2116,7 @@ the level of the one trying to do it.
 
 WAINWRIGHT=WAINWRIGHTING
 WAINWRIGHTING=<ABILITY>\
-Usage    : WAINWRIGHT (LIST/INFO/LEARN) [ITEM NAME]\n\r\
+Usage    : WAINWRIGHT (LIST/INFO/LEARN) [ITEM NAME] (FROM [RESOURCE NAME])\n\r\
 Example  : wainwright wagon\n\r\
 :        : wainwright list\n\r\
 :        : wainwright list wagon\n\r\
@@ -2144,6 +2159,7 @@ benefits using the PUT [CORE] [WAND] command.
 WEAPONSMITH=WEAPONSMITHING
 WEAPONSMITHING=<ABILITY>\
 Usage    : WEAPONSMITH (LIST/INFO/MEND/SCAN/LEARN) [WEAPON NAME]\n\r\
+Usage    :   ... (FROM [RESOURCE NAME])\n\r\
 Example  : weaponsmith twohanded sword\n\r\
 :        : weaponsmith list\n\r\
 :        : weaponsmith list Butchers Knife\n\r\
